--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header {
     width: calc(100% - 2*200px);
     margin-top: 45px;
+    margin-bottom: 40px;
     min-height: 74px;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
