--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,6 +2,6 @@
     display: grid;
     grid-template-columns: auto auto;
     gap: 16px 18px;
-    align-items: center;
+    align-items: baseline;
     margin-left: 30px;
 }
