--- a/pages/index.css
+++ b/pages/index.css
@@ -32,5 +32,5 @@
 @import url();
 @import url();
 @import url();
-@import url();
-@import url();
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
