--- a/pages/index.css
+++ b/pages/index.css
@@ -11,14 +11,13 @@
 @import url(../blocks/profile/__button-edit/profile__button-edit.css);
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__button-add/profile__button-add.css);
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
+@import url(../blocks/photos/photos.css);
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/element/element.css);
+@import url(../blocks/photo/photo.css);
+@import url(../blocks/photo/__info/photo__info.css);
+@import url(../blocks/photo/__description/photo__description.css);
+@import url(../blocks/photo/__like/photo__like.css);
 @import url();
 @import url();
 @import url();
