--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -5,4 +5,17 @@
     color: #fff;
     margin: 0;
     padding: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+
+
+@media screen and (max-width: 767px) {
+    .profile__subtitle {
+        font-size: 14px;
+        line-height: 17px;
+        margin-bottom: 36px;
+    }
 }
