--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,4 +1,10 @@
 .header__logo {
     max-width: 142px;
-    max-height: 33px;
+}
+
+@media  screen and (max-width: 767px) {
+    .header__logo {
+        max-width: 104px;
+        padding-left: 27px;
+    }
 }
