--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,3 +5,17 @@
     min-height: 74px;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
+
+@media screen and (max-width: 1279px) {
+    .header {
+        width: calc(100% - 2*100px);
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .header {
+        width: 100%;
+        margin-top: 28px;
+        min-height: 56px;
+    }
+}
