--- a/blocks/photo/__description/photo__description.css
+++ b/blocks/photo/__description/photo__description.css
@@ -2,6 +2,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    font-weight: 900;
     font-size: 24px;
     line-height: 29px;
     padding: 0;
