--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,9 +1,21 @@
 .profile {
     display: flex;
     align-items: center;
-    width: calc(100% - 2*200px);
+    width: 100%;
     margin-bottom: 50px;
     box-sizing: border-box;
     margin: 0 auto;
     margin-bottom: 50px;
+}
+
+@media screen and (max-width: 840px) {
+    .profile {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 767px) {
+   .profile {
+        margin-bottom: 36px;
+   }
 }
