--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -11,6 +11,10 @@
     align-self: center;
 }
 
+.profile__button-edit:hover {
+    opacity: 0.6;
+}
+
 @media screen and (max-width: 767px) {
     .profile__button-edit {
         min-width: 18px;
