--- a/blocks/photo/__like/photo__like.css
+++ b/blocks/photo/__like/photo__like.css
@@ -12,5 +12,10 @@
 }
 
 .photo__like:hover {
-    opacity: 0.6;
+    opacity: 0.5;
+}
+
+.photo__like:active {
+    background: url(../../../images/Like\ active.svg);
+    background-repeat: no-repeat;
 }
