--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,7 +1,7 @@
-.profile__subtitle {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
+.profile__name {
+    font-weight: 500;
+    font-size: 42px;
+    line-height: 48px;
     color: #fff;
     margin: 0;
     padding: 0;
@@ -11,8 +11,8 @@
 }
 
 @media screen and (max-width: 767px) {
-    .profile__subtitle {
-        font-size: 14px;
-        line-height: 17px;
+    .profile__name {
+        font-size: 27px;
+        line-height: 33px;
     }
 }
