--- a/blocks/photo/photo.css
+++ b/blocks/photo/photo.css
@@ -1,6 +1,6 @@
 .photo {
-   display: block;
-   object-fit: cover;
-   width: 282px;
-   aspect-ratio: 1;
+    background: #fff;
+    border-radius: 10px;
+    margin: 0 auto;
+    overflow: hidden;
 }
