--- a/pages/index.css
+++ b/pages/index.css
@@ -13,8 +13,8 @@
 @import url(../blocks/profile/__button-add/profile__button-add.css);
 @import url(../blocks/photos/photos.css);
 @import url(../blocks/elements/elements.css);
-@import url(../blocks/element/element.css);
 @import url(../blocks/photo/photo.css);
+@import url(../blocks/photo/__item/photo__item.css);
 @import url(../blocks/photo/__info/photo__info.css);
 @import url(../blocks/photo/__description/photo__description.css);
 @import url(../blocks/photo/__like/photo__like.css);
