--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,10 +2,8 @@
     display: flex;
     align-items: center;
     width: 100%;
-    margin-bottom: 50px;
     box-sizing: border-box;
-    margin: 0 auto;
-    margin-bottom: 50px;
+    margin: 0 auto 50px;
 }
 
 @media screen and (max-width: 840px) {
