--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -8,11 +8,13 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    max-width: 336px;
 }
 
 @media screen and (max-width: 767px) {
     .profile__about {
         font-size: 14px;
         line-height: 17px;
+        max-width: 282px;
     }
 }
