--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -2,12 +2,13 @@
     background-image: url(../../../images/Edit\ Button.svg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     min-width: 24px;
     min-height: 24px;
     padding: 0;
     border: 1px solid #fff;
-    background-color: transparent;
     cursor: pointer;
+    background-color: transparent; 
     align-self: center;
 }
 
