--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -8,11 +8,13 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    max-width: 336px;
 }
 
 @media screen and (max-width: 767px) {
     .profile__name {
         font-size: 27px;
         line-height: 33px;
+        max-width: 282px;
     }
 }
