--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -22,6 +22,8 @@
 @media screen and (max-width: 767px) {
     .popup__save-button {
       width: 238px;
-    height: 46px;  
+      height: 46px;
+      font-size: 14px;
+      line-height: 17px;
     }
 }
