--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,5 +1,5 @@
 .popup__close-button {
-    background: url(../../../images/Close\ Icon.svg);
+    background: url(../../../images/close\ icon.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
