--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -1,5 +1,5 @@
 .profile__button-edit {
-    background-image: url(../../../images/Edit\ Button.svg);
+    background-image: url(../../../images/edit\ button.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
