--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,5 +7,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.3s, opacity 0.3s linear;
 }
