--- a/blocks/popup/__image-container/popup__image-container.css
+++ b/blocks/popup/__image-container/popup__image-container.css
@@ -1,3 +1,8 @@
 .popup__image-container {
-    position: relative;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    margin: 0 auto;
 }
