--- a/blocks/photos/photos.css
+++ b/blocks/photos/photos.css
@@ -1,5 +1,13 @@
-/* .photos {
-  width: 100%;
+.photos {
+  /* width: 100%;
   margin: 0 auto;
-  box-sizing: border-box;
-} */
+  box-sizing: border-box; */
+    display: grid;
+    gap: 20px 17px;
+    grid-template-columns: repeat(auto-fit, 282px);
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+  }
+
+
