--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -1,5 +1,5 @@
 .profile__button-add {
-    background: url(../../../images/add\ button.svg);
+    background: url(../../../images/add-button.svg);
     background-repeat: no-repeat;
     background-position: center;
     min-width: 150px;
