--- a/blocks/photo/__trash/photo__trash.css
+++ b/blocks/photo/__trash/photo__trash.css
@@ -1,5 +1,5 @@
 .photo__trash {
-    background: url(../../../images/trash\ icon.svg);
+    background: url(../../../images/trash-icon.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
