--- a/blocks/photo/__like/photo__like.css
+++ b/blocks/photo/__like/photo__like.css
@@ -1,5 +1,5 @@
 .photo__like {
-    background: url(../../../images/like.svg);
+    background: url(../../../images/like-icon.svg);
     background-repeat: no-repeat;
     background-position: center;
     min-width: 22px;
