vadationConfig, overlay, button disabled

--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup__text {
+.popup__input {
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
@@ -10,7 +10,7 @@
 }
 
 @media screen and (max-width: 767px) {
-    .popup__text {
+    .popup__input {
         width: 238px;
     }
 }
