--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,4 +1,4 @@
-.popup__save-button {
+.popup__button {
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
@@ -15,12 +15,12 @@
     margin-top: 18px;
 }
 
-.popup__save-button:hover {
+.popup__button:hover {
     opacity: 0.6;
 }
 
 @media screen and (max-width: 767px) {
-    .popup__save-button {
+    .popup__button {
       width: 238px;
       height: 46px;
       font-size: 14px;
