--- a/blocks/popup/__error/_visible/popup__error_visible.css
+++ b/blocks/popup/__error/_visible/popup__error_visible.css
@@ -1,10 +1,14 @@
 .popup__error_visible {
-    display: flex;
     color: #FF0000;
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
     width: 358px;
-    min-height: 30px;
-    margin-top: 5px;
+    box-sizing: border-box;
+}
+
+@media screen and (max-width: 767px) {
+    .popup__error_visible {
+        width: 238px;
+    }
 }
