--- a/src/styles/blocks/photo/__like/_active/photo__like_active.css
+++ b/src/styles/blocks/photo/__like/_active/photo__like_active.css
@@ -1,5 +1,5 @@
 .photo__like_active {
-    background: url(../../../../images/like-active.svg);
+    background: url(../../../../../images/like-active.svg);
     background-repeat: no-repeat;
     background-position: center;
 }
