--- a/src/styles/blocks/profile/__button-edit/profile__button-edit.css
+++ b/src/styles/blocks/profile/__button-edit/profile__button-edit.css
@@ -2,7 +2,7 @@
     background-image: url(../../../../images/edit-button.svg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: 10px 10px;
     min-width: 24px;
     min-height: 24px;
     padding: 0;
